--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "togather",
   "private": true,
-  "version": "0.0.0",
+  "homepage": "https://yakovm1ke.github.io/togather/",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,8 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "firebase": "^10.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
